# linux_light

./: .gitignore  README.md  pyproject.toml
omen_lights/: cli.py  device.py  protocol.py
udev/: 99-hp-omen-lights.rules
